// Vitest Snapshot v1

exports[`accent atom 1`] = `
VStackBox {
  "align": undefined,
  "atom": AccentAtom {
    "accent": SymAtom {
      "bold": false,
      "char": "^",
      "charBox": true,
      "command": "^",
      "composite": undefined,
      "elem": null,
      "font": null,
      "fonts": [
        "Main-R",
      ],
      "italic": false,
      "kind": "ord",
      "parent": null,
      "ref": false,
    },
    "body": GroupAtom {
      "body": [
        FirstAtom {
          "elem": null,
          "kind": null,
          "parent": [Circular],
        },
        SymAtom {
          "bold": false,
          "char": "j",
          "charBox": true,
          "command": "j",
          "composite": undefined,
          "elem": null,
          "font": null,
          "fonts": [
            "Math-I",
          ],
          "italic": false,
          "kind": "ord",
          "parent": [Circular],
          "ref": false,
        },
      ],
      "elem": null,
      "kind": "ord",
      "parent": [Circular],
    },
    "elem": null,
    "kind": "ord",
    "parent": null,
  },
  "children": [
    SymBox {
      "atom": SymAtom {
        "bold": false,
        "char": "^",
        "charBox": true,
        "command": "^",
        "composite": undefined,
        "elem": null,
        "font": null,
        "fonts": [
          "Main-R",
        ],
        "italic": false,
        "kind": "ord",
        "parent": null,
        "ref": false,
      },
      "bold": false,
      "char": "^",
      "composite": undefined,
      "font": "Main-R",
      "italic": 0,
      "italicStyle": false,
      "rect": {
        "depth": 0,
        "height": 0.69444,
        "width": 0.5,
      },
      "ref": false,
      "space": {
        "bottom": -0.431,
      },
    },
    HBox {
      "atom": GroupAtom {
        "body": [
          FirstAtom {
            "elem": null,
            "kind": null,
            "parent": [Circular],
          },
          SymAtom {
            "bold": false,
            "char": "j",
            "charBox": true,
            "command": "j",
            "composite": undefined,
            "elem": null,
            "font": null,
            "fonts": [
              "Math-I",
            ],
            "italic": false,
            "kind": "ord",
            "parent": [Circular],
            "ref": false,
          },
        ],
        "elem": null,
        "kind": "ord",
        "parent": AccentAtom {
          "accent": SymAtom {
            "bold": false,
            "char": "^",
            "charBox": true,
            "command": "^",
            "composite": undefined,
            "elem": null,
            "font": null,
            "fonts": [
              "Main-R",
            ],
            "italic": false,
            "kind": "ord",
            "parent": null,
            "ref": false,
          },
          "body": [Circular],
          "elem": null,
          "kind": "ord",
          "parent": null,
        },
      },
      "children": [
        SymBox {
          "atom": FirstAtom {
            "elem": null,
            "kind": null,
            "parent": GroupAtom {
              "body": [
                [Circular],
                SymAtom {
                  "bold": false,
                  "char": "j",
                  "charBox": true,
                  "command": "j",
                  "composite": undefined,
                  "elem": null,
                  "font": null,
                  "fonts": [
                    "Math-I",
                  ],
                  "italic": false,
                  "kind": "ord",
                  "parent": [Circular],
                  "ref": false,
                },
              ],
              "elem": null,
              "kind": "ord",
              "parent": AccentAtom {
                "accent": SymAtom {
                  "bold": false,
                  "char": "^",
                  "charBox": true,
                  "command": "^",
                  "composite": undefined,
                  "elem": null,
                  "font": null,
                  "fonts": [
                    "Main-R",
                  ],
                  "italic": false,
                  "kind": "ord",
                  "parent": null,
                  "ref": false,
                },
                "body": [Circular],
                "elem": null,
                "kind": "ord",
                "parent": null,
              },
            },
          },
          "bold": false,
          "char": "&#8203;",
          "composite": undefined,
          "font": "Math-I",
          "italic": 0,
          "italicStyle": false,
          "rect": {
            "depth": 0,
            "height": 0.4306,
            "width": 0,
          },
          "ref": false,
          "space": {},
        },
        SymBox {
          "atom": SymAtom {
            "bold": false,
            "char": "j",
            "charBox": true,
            "command": "j",
            "composite": undefined,
            "elem": null,
            "font": null,
            "fonts": [
              "Math-I",
            ],
            "italic": false,
            "kind": "ord",
            "parent": GroupAtom {
              "body": [
                FirstAtom {
                  "elem": null,
                  "kind": null,
                  "parent": [Circular],
                },
                [Circular],
              ],
              "elem": null,
              "kind": "ord",
              "parent": AccentAtom {
                "accent": SymAtom {
                  "bold": false,
                  "char": "^",
                  "charBox": true,
                  "command": "^",
                  "composite": undefined,
                  "elem": null,
                  "font": null,
                  "fonts": [
                    "Main-R",
                  ],
                  "italic": false,
                  "kind": "ord",
                  "parent": null,
                  "ref": false,
                },
                "body": [Circular],
                "elem": null,
                "kind": "ord",
                "parent": null,
              },
            },
            "ref": false,
          },
          "bold": false,
          "char": "j",
          "composite": undefined,
          "font": "Math-I",
          "italic": 0.05724,
          "italicStyle": false,
          "rect": {
            "depth": 0.19444,
            "height": 0.65952,
            "width": 0.46905,
          },
          "ref": false,
          "space": {},
        },
      ],
      "label": null,
      "mode": "hbox",
      "multiplier": undefined,
      "rect": {
        "depth": 0.19444,
        "height": 0.65952,
        "width": 0.46905,
      },
      "space": {},
      "thmName": null,
    },
  ],
  "multiplier": undefined,
  "newDepth": 0.19444,
  "rect": {
    "depth": 0.19444,
    "height": 0.92296,
    "width": 0.5,
  },
  "shift": -0,
  "space": {},
}
`;

exports[`frac atom 1`] = `
VBox {
  "align": undefined,
  "atom": FracAtom {
    "denom": GroupAtom {
      "body": [
        FirstAtom {
          "elem": null,
          "kind": null,
          "parent": [Circular],
        },
        SymAtom {
          "bold": false,
          "char": "j",
          "charBox": true,
          "command": "j",
          "composite": undefined,
          "elem": null,
          "font": null,
          "fonts": [
            "Math-I",
          ],
          "italic": false,
          "kind": "ord",
          "parent": [Circular],
          "ref": false,
        },
      ],
      "elem": null,
      "kind": "ord",
      "parent": [Circular],
    },
    "elem": null,
    "kind": "ord",
    "numer": GroupAtom {
      "body": [
        FirstAtom {
          "elem": null,
          "kind": null,
          "parent": [Circular],
        },
        SymAtom {
          "bold": false,
          "char": "j",
          "charBox": true,
          "command": "j",
          "composite": undefined,
          "elem": null,
          "font": null,
          "fonts": [
            "Math-I",
          ],
          "italic": false,
          "kind": "ord",
          "parent": GroupAtom {
            "body": [
              FirstAtom {
                "elem": null,
                "kind": null,
                "parent": [Circular],
              },
              [Circular],
            ],
            "elem": null,
            "kind": "ord",
            "parent": [Circular],
          },
          "ref": false,
        },
      ],
      "elem": null,
      "kind": "ord",
      "parent": [Circular],
    },
    "parent": null,
  },
  "children": [
    {
      "box": HBox {
        "atom": GroupAtom {
          "body": [
            FirstAtom {
              "elem": null,
              "kind": null,
              "parent": [Circular],
            },
            SymAtom {
              "bold": false,
              "char": "j",
              "charBox": true,
              "command": "j",
              "composite": undefined,
              "elem": null,
              "font": null,
              "fonts": [
                "Math-I",
              ],
              "italic": false,
              "kind": "ord",
              "parent": GroupAtom {
                "body": [
                  FirstAtom {
                    "elem": null,
                    "kind": null,
                    "parent": [Circular],
                  },
                  [Circular],
                ],
                "elem": null,
                "kind": "ord",
                "parent": FracAtom {
                  "denom": [Circular],
                  "elem": null,
                  "kind": "ord",
                  "numer": [Circular],
                  "parent": null,
                },
              },
              "ref": false,
            },
          ],
          "elem": null,
          "kind": "ord",
          "parent": FracAtom {
            "denom": GroupAtom {
              "body": [
                FirstAtom {
                  "elem": null,
                  "kind": null,
                  "parent": [Circular],
                },
                SymAtom {
                  "bold": false,
                  "char": "j",
                  "charBox": true,
                  "command": "j",
                  "composite": undefined,
                  "elem": null,
                  "font": null,
                  "fonts": [
                    "Math-I",
                  ],
                  "italic": false,
                  "kind": "ord",
                  "parent": [Circular],
                  "ref": false,
                },
              ],
              "elem": null,
              "kind": "ord",
              "parent": [Circular],
            },
            "elem": null,
            "kind": "ord",
            "numer": [Circular],
            "parent": null,
          },
        },
        "children": [
          SymBox {
            "atom": FirstAtom {
              "elem": null,
              "kind": null,
              "parent": GroupAtom {
                "body": [
                  [Circular],
                  SymAtom {
                    "bold": false,
                    "char": "j",
                    "charBox": true,
                    "command": "j",
                    "composite": undefined,
                    "elem": null,
                    "font": null,
                    "fonts": [
                      "Math-I",
                    ],
                    "italic": false,
                    "kind": "ord",
                    "parent": GroupAtom {
                      "body": [
                        FirstAtom {
                          "elem": null,
                          "kind": null,
                          "parent": [Circular],
                        },
                        [Circular],
                      ],
                      "elem": null,
                      "kind": "ord",
                      "parent": FracAtom {
                        "denom": [Circular],
                        "elem": null,
                        "kind": "ord",
                        "numer": [Circular],
                        "parent": null,
                      },
                    },
                    "ref": false,
                  },
                ],
                "elem": null,
                "kind": "ord",
                "parent": FracAtom {
                  "denom": GroupAtom {
                    "body": [
                      FirstAtom {
                        "elem": null,
                        "kind": null,
                        "parent": [Circular],
                      },
                      SymAtom {
                        "bold": false,
                        "char": "j",
                        "charBox": true,
                        "command": "j",
                        "composite": undefined,
                        "elem": null,
                        "font": null,
                        "fonts": [
                          "Math-I",
                        ],
                        "italic": false,
                        "kind": "ord",
                        "parent": [Circular],
                        "ref": false,
                      },
                    ],
                    "elem": null,
                    "kind": "ord",
                    "parent": [Circular],
                  },
                  "elem": null,
                  "kind": "ord",
                  "numer": [Circular],
                  "parent": null,
                },
              },
            },
            "bold": false,
            "char": "&#8203;",
            "composite": undefined,
            "font": "Math-I",
            "italic": 0,
            "italicStyle": false,
            "rect": {
              "depth": 0,
              "height": 0.4306,
              "width": 0,
            },
            "ref": false,
            "space": {},
          },
          SymBox {
            "atom": SymAtom {
              "bold": false,
              "char": "j",
              "charBox": true,
              "command": "j",
              "composite": undefined,
              "elem": null,
              "font": null,
              "fonts": [
                "Math-I",
              ],
              "italic": false,
              "kind": "ord",
              "parent": GroupAtom {
                "body": [
                  FirstAtom {
                    "elem": null,
                    "kind": null,
                    "parent": [Circular],
                  },
                  [Circular],
                ],
                "elem": null,
                "kind": "ord",
                "parent": FracAtom {
                  "denom": [Circular],
                  "elem": null,
                  "kind": "ord",
                  "numer": GroupAtom {
                    "body": [
                      FirstAtom {
                        "elem": null,
                        "kind": null,
                        "parent": [Circular],
                      },
                      [Circular],
                    ],
                    "elem": null,
                    "kind": "ord",
                    "parent": [Circular],
                  },
                  "parent": null,
                },
              },
              "ref": false,
            },
            "bold": false,
            "char": "j",
            "composite": undefined,
            "font": "Math-I",
            "italic": 0.05724,
            "italicStyle": false,
            "rect": {
              "depth": 0.19444,
              "height": 0.65952,
              "width": 0.46905,
            },
            "ref": false,
            "space": {},
          },
        ],
        "label": null,
        "mode": "hbox",
        "multiplier": 1,
        "rect": {
          "depth": 0.19444,
          "height": 0.65952,
          "width": 0.46905,
        },
        "space": {},
        "thmName": null,
      },
      "shift": 0.677,
    },
    {
      "box": RectBox {
        "atom": undefined,
        "classes": [
          "line",
        ],
        "multiplier": undefined,
        "rect": {
          "depth": 0,
          "height": 0.04,
          "width": 0,
        },
        "space": {},
      },
      "shift": 0.23,
    },
    {
      "box": HBox {
        "atom": GroupAtom {
          "body": [
            FirstAtom {
              "elem": null,
              "kind": null,
              "parent": [Circular],
            },
            SymAtom {
              "bold": false,
              "char": "j",
              "charBox": true,
              "command": "j",
              "composite": undefined,
              "elem": null,
              "font": null,
              "fonts": [
                "Math-I",
              ],
              "italic": false,
              "kind": "ord",
              "parent": [Circular],
              "ref": false,
            },
          ],
          "elem": null,
          "kind": "ord",
          "parent": FracAtom {
            "denom": [Circular],
            "elem": null,
            "kind": "ord",
            "numer": GroupAtom {
              "body": [
                FirstAtom {
                  "elem": null,
                  "kind": null,
                  "parent": [Circular],
                },
                SymAtom {
                  "bold": false,
                  "char": "j",
                  "charBox": true,
                  "command": "j",
                  "composite": undefined,
                  "elem": null,
                  "font": null,
                  "fonts": [
                    "Math-I",
                  ],
                  "italic": false,
                  "kind": "ord",
                  "parent": [Circular],
                  "ref": false,
                },
              ],
              "elem": null,
              "kind": "ord",
              "parent": [Circular],
            },
            "parent": null,
          },
        },
        "children": [
          SymBox {
            "atom": FirstAtom {
              "elem": null,
              "kind": null,
              "parent": GroupAtom {
                "body": [
                  [Circular],
                  SymAtom {
                    "bold": false,
                    "char": "j",
                    "charBox": true,
                    "command": "j",
                    "composite": undefined,
                    "elem": null,
                    "font": null,
                    "fonts": [
                      "Math-I",
                    ],
                    "italic": false,
                    "kind": "ord",
                    "parent": [Circular],
                    "ref": false,
                  },
                ],
                "elem": null,
                "kind": "ord",
                "parent": FracAtom {
                  "denom": [Circular],
                  "elem": null,
                  "kind": "ord",
                  "numer": GroupAtom {
                    "body": [
                      FirstAtom {
                        "elem": null,
                        "kind": null,
                        "parent": [Circular],
                      },
                      SymAtom {
                        "bold": false,
                        "char": "j",
                        "charBox": true,
                        "command": "j",
                        "composite": undefined,
                        "elem": null,
                        "font": null,
                        "fonts": [
                          "Math-I",
                        ],
                        "italic": false,
                        "kind": "ord",
                        "parent": [Circular],
                        "ref": false,
                      },
                    ],
                    "elem": null,
                    "kind": "ord",
                    "parent": [Circular],
                  },
                  "parent": null,
                },
              },
            },
            "bold": false,
            "char": "&#8203;",
            "composite": undefined,
            "font": "Math-I",
            "italic": 0,
            "italicStyle": false,
            "rect": {
              "depth": 0,
              "height": 0.4306,
              "width": 0,
            },
            "ref": false,
            "space": {},
          },
          SymBox {
            "atom": SymAtom {
              "bold": false,
              "char": "j",
              "charBox": true,
              "command": "j",
              "composite": undefined,
              "elem": null,
              "font": null,
              "fonts": [
                "Math-I",
              ],
              "italic": false,
              "kind": "ord",
              "parent": GroupAtom {
                "body": [
                  FirstAtom {
                    "elem": null,
                    "kind": null,
                    "parent": [Circular],
                  },
                  [Circular],
                ],
                "elem": null,
                "kind": "ord",
                "parent": FracAtom {
                  "denom": [Circular],
                  "elem": null,
                  "kind": "ord",
                  "numer": GroupAtom {
                    "body": [
                      FirstAtom {
                        "elem": null,
                        "kind": null,
                        "parent": [Circular],
                      },
                      [Circular],
                    ],
                    "elem": null,
                    "kind": "ord",
                    "parent": [Circular],
                  },
                  "parent": null,
                },
              },
              "ref": false,
            },
            "bold": false,
            "char": "j",
            "composite": undefined,
            "font": "Math-I",
            "italic": 0.05724,
            "italicStyle": false,
            "rect": {
              "depth": 0.19444,
              "height": 0.65952,
              "width": 0.46905,
            },
            "ref": false,
            "space": {},
          },
        ],
        "label": null,
        "mode": "hbox",
        "multiplier": 1,
        "rect": {
          "depth": 0.19444,
          "height": 0.65952,
          "width": 0.46905,
        },
        "space": {},
        "thmName": null,
      },
      "shift": -0.686,
    },
  ],
  "multiplier": undefined,
  "rect": {
    "depth": 0.8804400000000001,
    "height": 1.3365200000000002,
    "width": 0.46905,
  },
  "space": {
    "left": 0.12,
    "right": 0.12,
  },
  "tag": false,
}
`;

exports[`leftright atom 1`] = `
HBox {
  "atom": LRAtom {
    "body": GroupAtom {
      "body": [
        FirstAtom {
          "elem": null,
          "kind": null,
          "parent": [Circular],
        },
        SymAtom {
          "bold": false,
          "char": "j",
          "charBox": true,
          "command": "j",
          "composite": undefined,
          "elem": null,
          "font": null,
          "fonts": [
            "Math-I",
          ],
          "italic": false,
          "kind": "ord",
          "parent": [Circular],
          "ref": false,
        },
      ],
      "elem": null,
      "kind": "ord",
      "parent": [Circular],
    },
    "elem": null,
    "kind": "inner",
    "left": "(",
    "middle": [],
    "parent": null,
    "right": ")",
  },
  "children": [
    SymBox {
      "atom": SymAtom {
        "bold": false,
        "char": "(",
        "charBox": true,
        "command": "(",
        "composite": undefined,
        "elem": null,
        "font": null,
        "fonts": [
          "Main-R",
        ],
        "italic": false,
        "kind": "open",
        "parent": null,
        "ref": false,
      },
      "bold": false,
      "char": "(",
      "composite": undefined,
      "font": "Main-R",
      "italic": 0,
      "italicStyle": false,
      "rect": {
        "depth": 0.25,
        "height": 0.75,
        "width": 0.38889,
      },
      "ref": false,
      "space": {},
    },
    HBox {
      "atom": GroupAtom {
        "body": [
          FirstAtom {
            "elem": null,
            "kind": null,
            "parent": [Circular],
          },
          SymAtom {
            "bold": false,
            "char": "j",
            "charBox": true,
            "command": "j",
            "composite": undefined,
            "elem": null,
            "font": null,
            "fonts": [
              "Math-I",
            ],
            "italic": false,
            "kind": "ord",
            "parent": [Circular],
            "ref": false,
          },
        ],
        "elem": null,
        "kind": "ord",
        "parent": LRAtom {
          "body": [Circular],
          "elem": null,
          "kind": "inner",
          "left": "(",
          "middle": [],
          "parent": null,
          "right": ")",
        },
      },
      "children": [
        SymBox {
          "atom": FirstAtom {
            "elem": null,
            "kind": null,
            "parent": GroupAtom {
              "body": [
                [Circular],
                SymAtom {
                  "bold": false,
                  "char": "j",
                  "charBox": true,
                  "command": "j",
                  "composite": undefined,
                  "elem": null,
                  "font": null,
                  "fonts": [
                    "Math-I",
                  ],
                  "italic": false,
                  "kind": "ord",
                  "parent": [Circular],
                  "ref": false,
                },
              ],
              "elem": null,
              "kind": "ord",
              "parent": LRAtom {
                "body": [Circular],
                "elem": null,
                "kind": "inner",
                "left": "(",
                "middle": [],
                "parent": null,
                "right": ")",
              },
            },
          },
          "bold": false,
          "char": "&#8203;",
          "composite": undefined,
          "font": "Math-I",
          "italic": 0,
          "italicStyle": false,
          "rect": {
            "depth": 0,
            "height": 0.4306,
            "width": 0,
          },
          "ref": false,
          "space": {},
        },
        SymBox {
          "atom": SymAtom {
            "bold": false,
            "char": "j",
            "charBox": true,
            "command": "j",
            "composite": undefined,
            "elem": null,
            "font": null,
            "fonts": [
              "Math-I",
            ],
            "italic": false,
            "kind": "ord",
            "parent": GroupAtom {
              "body": [
                FirstAtom {
                  "elem": null,
                  "kind": null,
                  "parent": [Circular],
                },
                [Circular],
              ],
              "elem": null,
              "kind": "ord",
              "parent": LRAtom {
                "body": [Circular],
                "elem": null,
                "kind": "inner",
                "left": "(",
                "middle": [],
                "parent": null,
                "right": ")",
              },
            },
            "ref": false,
          },
          "bold": false,
          "char": "j",
          "composite": undefined,
          "font": "Math-I",
          "italic": 0.05724,
          "italicStyle": false,
          "rect": {
            "depth": 0.19444,
            "height": 0.65952,
            "width": 0.46905,
          },
          "ref": false,
          "space": {},
        },
      ],
      "label": null,
      "mode": "hbox",
      "multiplier": undefined,
      "rect": {
        "depth": 0.19444,
        "height": 0.65952,
        "width": 0.46905,
      },
      "space": {},
      "thmName": null,
    },
    SymBox {
      "atom": SymAtom {
        "bold": false,
        "char": ")",
        "charBox": true,
        "command": ")",
        "composite": undefined,
        "elem": null,
        "font": null,
        "fonts": [
          "Main-R",
        ],
        "italic": false,
        "kind": "open",
        "parent": null,
        "ref": false,
      },
      "bold": false,
      "char": ")",
      "composite": undefined,
      "font": "Main-R",
      "italic": 0,
      "italicStyle": false,
      "rect": {
        "depth": 0.25,
        "height": 0.75,
        "width": 0.38889,
      },
      "ref": false,
      "space": {},
    },
  ],
  "label": null,
  "mode": "hbox",
  "multiplier": undefined,
  "rect": {
    "depth": 0.25,
    "height": 0.75,
    "width": 1.24683,
  },
  "space": {},
  "thmName": null,
}
`;

exports[`matrix atom 1`] = `
HBox {
  "atom": MatrixAtom {
    "children": [
      [
        GroupAtom {
          "body": [
            FirstAtom {
              "elem": null,
              "kind": null,
              "parent": [Circular],
            },
            SymAtom {
              "bold": false,
              "char": "j",
              "charBox": true,
              "command": "j",
              "composite": undefined,
              "elem": null,
              "font": null,
              "fonts": [
                "Math-I",
              ],
              "italic": false,
              "kind": "ord",
              "parent": [Circular],
              "ref": false,
            },
          ],
          "elem": null,
          "kind": "ord",
          "parent": [Circular],
        },
        GroupAtom {
          "body": [
            FirstAtom {
              "elem": null,
              "kind": null,
              "parent": [Circular],
            },
            SymAtom {
              "bold": false,
              "char": "j",
              "charBox": true,
              "command": "j",
              "composite": undefined,
              "elem": null,
              "font": null,
              "fonts": [
                "Math-I",
              ],
              "italic": false,
              "kind": "ord",
              "parent": [Circular],
              "ref": false,
            },
          ],
          "elem": null,
          "kind": "ord",
          "parent": [Circular],
        },
      ],
      [
        GroupAtom {
          "body": [
            FirstAtom {
              "elem": null,
              "kind": null,
              "parent": [Circular],
            },
            SymAtom {
              "bold": false,
              "char": "j",
              "charBox": true,
              "command": "j",
              "composite": undefined,
              "elem": null,
              "font": null,
              "fonts": [
                "Math-I",
              ],
              "italic": false,
              "kind": "ord",
              "parent": [Circular],
              "ref": false,
            },
          ],
          "elem": null,
          "kind": "ord",
          "parent": [Circular],
        },
      ],
    ],
    "editable": false,
    "elem": null,
    "grid": false,
    "kind": "inner",
    "labels": [],
    "parent": null,
    "type": "pmatrix",
  },
  "children": [
    SymBox {
      "atom": SymAtom {
        "bold": false,
        "char": "(",
        "charBox": true,
        "command": "(",
        "composite": undefined,
        "elem": null,
        "font": null,
        "fonts": [
          "Size3",
        ],
        "italic": false,
        "kind": "open",
        "parent": null,
        "ref": false,
      },
      "bold": false,
      "char": "(",
      "composite": undefined,
      "font": "Size3",
      "italic": 0,
      "italicStyle": false,
      "rect": {
        "depth": 0.95003,
        "height": 1.45,
        "width": 0.73611,
      },
      "ref": false,
      "space": {},
    },
    VBox {
      "align": undefined,
      "atom": undefined,
      "children": [
        {
          "box": HBox {
            "atom": undefined,
            "children": [
              HBox {
                "atom": undefined,
                "children": [
                  VBox {
                    "align": undefined,
                    "atom": undefined,
                    "children": [
                      {
                        "box": HBox {
                          "atom": GroupAtom {
                            "body": [
                              FirstAtom {
                                "elem": null,
                                "kind": null,
                                "parent": [Circular],
                              },
                              SymAtom {
                                "bold": false,
                                "char": "j",
                                "charBox": true,
                                "command": "j",
                                "composite": undefined,
                                "elem": null,
                                "font": null,
                                "fonts": [
                                  "Math-I",
                                ],
                                "italic": false,
                                "kind": "ord",
                                "parent": [Circular],
                                "ref": false,
                              },
                            ],
                            "elem": null,
                            "kind": "ord",
                            "parent": MatrixAtom {
                              "children": [
                                [
                                  [Circular],
                                  [Circular],
                                ],
                                [
                                  [Circular],
                                ],
                              ],
                              "editable": false,
                              "elem": null,
                              "grid": false,
                              "kind": "inner",
                              "labels": [],
                              "parent": null,
                              "type": "pmatrix",
                            },
                          },
                          "children": [
                            SymBox {
                              "atom": FirstAtom {
                                "elem": null,
                                "kind": null,
                                "parent": GroupAtom {
                                  "body": [
                                    [Circular],
                                    SymAtom {
                                      "bold": false,
                                      "char": "j",
                                      "charBox": true,
                                      "command": "j",
                                      "composite": undefined,
                                      "elem": null,
                                      "font": null,
                                      "fonts": [
                                        "Math-I",
                                      ],
                                      "italic": false,
                                      "kind": "ord",
                                      "parent": [Circular],
                                      "ref": false,
                                    },
                                  ],
                                  "elem": null,
                                  "kind": "ord",
                                  "parent": MatrixAtom {
                                    "children": [
                                      [
                                        [Circular],
                                        [Circular],
                                      ],
                                      [
                                        [Circular],
                                      ],
                                    ],
                                    "editable": false,
                                    "elem": null,
                                    "grid": false,
                                    "kind": "inner",
                                    "labels": [],
                                    "parent": null,
                                    "type": "pmatrix",
                                  },
                                },
                              },
                              "bold": false,
                              "char": "&#8203;",
                              "composite": undefined,
                              "font": "Math-I",
                              "italic": 0,
                              "italicStyle": false,
                              "rect": {
                                "depth": 0,
                                "height": 0.4306,
                                "width": 0,
                              },
                              "ref": false,
                              "space": {},
                            },
                            SymBox {
                              "atom": SymAtom {
                                "bold": false,
                                "char": "j",
                                "charBox": true,
                                "command": "j",
                                "composite": undefined,
                                "elem": null,
                                "font": null,
                                "fonts": [
                                  "Math-I",
                                ],
                                "italic": false,
                                "kind": "ord",
                                "parent": GroupAtom {
                                  "body": [
                                    FirstAtom {
                                      "elem": null,
                                      "kind": null,
                                      "parent": [Circular],
                                    },
                                    [Circular],
                                  ],
                                  "elem": null,
                                  "kind": "ord",
                                  "parent": MatrixAtom {
                                    "children": [
                                      [
                                        [Circular],
                                        [Circular],
                                      ],
                                      [
                                        [Circular],
                                      ],
                                    ],
                                    "editable": false,
                                    "elem": null,
                                    "grid": false,
                                    "kind": "inner",
                                    "labels": [],
                                    "parent": null,
                                    "type": "pmatrix",
                                  },
                                },
                                "ref": false,
                              },
                              "bold": false,
                              "char": "j",
                              "composite": undefined,
                              "font": "Math-I",
                              "italic": 0.05724,
                              "italicStyle": false,
                              "rect": {
                                "depth": 0.19444,
                                "height": 0.65952,
                                "width": 0.46905,
                              },
                              "ref": false,
                              "space": {},
                            },
                          ],
                          "label": null,
                          "mode": "hbox",
                          "multiplier": undefined,
                          "rect": {
                            "depth": 0.19444,
                            "height": 0.65952,
                            "width": 0.46905,
                          },
                          "space": {},
                          "thmName": null,
                        },
                        "shift": 0.6099999999999999,
                      },
                      {
                        "box": HBox {
                          "atom": GroupAtom {
                            "body": [
                              FirstAtom {
                                "elem": null,
                                "kind": null,
                                "parent": [Circular],
                              },
                              SymAtom {
                                "bold": false,
                                "char": "j",
                                "charBox": true,
                                "command": "j",
                                "composite": undefined,
                                "elem": null,
                                "font": null,
                                "fonts": [
                                  "Math-I",
                                ],
                                "italic": false,
                                "kind": "ord",
                                "parent": [Circular],
                                "ref": false,
                              },
                            ],
                            "elem": null,
                            "kind": "ord",
                            "parent": MatrixAtom {
                              "children": [
                                [
                                  [Circular],
                                  [Circular],
                                ],
                                [
                                  [Circular],
                                ],
                              ],
                              "editable": false,
                              "elem": null,
                              "grid": false,
                              "kind": "inner",
                              "labels": [],
                              "parent": null,
                              "type": "pmatrix",
                            },
                          },
                          "children": [
                            SymBox {
                              "atom": FirstAtom {
                                "elem": null,
                                "kind": null,
                                "parent": GroupAtom {
                                  "body": [
                                    [Circular],
                                    SymAtom {
                                      "bold": false,
                                      "char": "j",
                                      "charBox": true,
                                      "command": "j",
                                      "composite": undefined,
                                      "elem": null,
                                      "font": null,
                                      "fonts": [
                                        "Math-I",
                                      ],
                                      "italic": false,
                                      "kind": "ord",
                                      "parent": [Circular],
                                      "ref": false,
                                    },
                                  ],
                                  "elem": null,
                                  "kind": "ord",
                                  "parent": MatrixAtom {
                                    "children": [
                                      [
                                        [Circular],
                                        [Circular],
                                      ],
                                      [
                                        [Circular],
                                      ],
                                    ],
                                    "editable": false,
                                    "elem": null,
                                    "grid": false,
                                    "kind": "inner",
                                    "labels": [],
                                    "parent": null,
                                    "type": "pmatrix",
                                  },
                                },
                              },
                              "bold": false,
                              "char": "&#8203;",
                              "composite": undefined,
                              "font": "Math-I",
                              "italic": 0,
                              "italicStyle": false,
                              "rect": {
                                "depth": 0,
                                "height": 0.4306,
                                "width": 0,
                              },
                              "ref": false,
                              "space": {},
                            },
                            SymBox {
                              "atom": SymAtom {
                                "bold": false,
                                "char": "j",
                                "charBox": true,
                                "command": "j",
                                "composite": undefined,
                                "elem": null,
                                "font": null,
                                "fonts": [
                                  "Math-I",
                                ],
                                "italic": false,
                                "kind": "ord",
                                "parent": GroupAtom {
                                  "body": [
                                    FirstAtom {
                                      "elem": null,
                                      "kind": null,
                                      "parent": [Circular],
                                    },
                                    [Circular],
                                  ],
                                  "elem": null,
                                  "kind": "ord",
                                  "parent": MatrixAtom {
                                    "children": [
                                      [
                                        [Circular],
                                        [Circular],
                                      ],
                                      [
                                        [Circular],
                                      ],
                                    ],
                                    "editable": false,
                                    "elem": null,
                                    "grid": false,
                                    "kind": "inner",
                                    "labels": [],
                                    "parent": null,
                                    "type": "pmatrix",
                                  },
                                },
                                "ref": false,
                              },
                              "bold": false,
                              "char": "j",
                              "composite": undefined,
                              "font": "Math-I",
                              "italic": 0.05724,
                              "italicStyle": false,
                              "rect": {
                                "depth": 0.19444,
                                "height": 0.65952,
                                "width": 0.46905,
                              },
                              "ref": false,
                              "space": {},
                            },
                          ],
                          "label": null,
                          "mode": "hbox",
                          "multiplier": undefined,
                          "rect": {
                            "depth": 0.19444,
                            "height": 0.65952,
                            "width": 0.46905,
                          },
                          "space": {},
                          "thmName": null,
                        },
                        "shift": -0.5900000000000001,
                      },
                    ],
                    "multiplier": undefined,
                    "rect": {
                      "depth": 0.78444,
                      "height": 1.26952,
                      "width": 0.46905,
                    },
                    "space": {
                      "right": 0.5,
                    },
                    "tag": false,
                  },
                  VBox {
                    "align": undefined,
                    "atom": undefined,
                    "children": [
                      {
                        "box": HBox {
                          "atom": GroupAtom {
                            "body": [
                              FirstAtom {
                                "elem": null,
                                "kind": null,
                                "parent": [Circular],
                              },
                              SymAtom {
                                "bold": false,
                                "char": "j",
                                "charBox": true,
                                "command": "j",
                                "composite": undefined,
                                "elem": null,
                                "font": null,
                                "fonts": [
                                  "Math-I",
                                ],
                                "italic": false,
                                "kind": "ord",
                                "parent": [Circular],
                                "ref": false,
                              },
                            ],
                            "elem": null,
                            "kind": "ord",
                            "parent": MatrixAtom {
                              "children": [
                                [
                                  [Circular],
                                  [Circular],
                                ],
                                [
                                  [Circular],
                                ],
                              ],
                              "editable": false,
                              "elem": null,
                              "grid": false,
                              "kind": "inner",
                              "labels": [],
                              "parent": null,
                              "type": "pmatrix",
                            },
                          },
                          "children": [
                            SymBox {
                              "atom": FirstAtom {
                                "elem": null,
                                "kind": null,
                                "parent": GroupAtom {
                                  "body": [
                                    [Circular],
                                    SymAtom {
                                      "bold": false,
                                      "char": "j",
                                      "charBox": true,
                                      "command": "j",
                                      "composite": undefined,
                                      "elem": null,
                                      "font": null,
                                      "fonts": [
                                        "Math-I",
                                      ],
                                      "italic": false,
                                      "kind": "ord",
                                      "parent": [Circular],
                                      "ref": false,
                                    },
                                  ],
                                  "elem": null,
                                  "kind": "ord",
                                  "parent": MatrixAtom {
                                    "children": [
                                      [
                                        [Circular],
                                        [Circular],
                                      ],
                                      [
                                        [Circular],
                                      ],
                                    ],
                                    "editable": false,
                                    "elem": null,
                                    "grid": false,
                                    "kind": "inner",
                                    "labels": [],
                                    "parent": null,
                                    "type": "pmatrix",
                                  },
                                },
                              },
                              "bold": false,
                              "char": "&#8203;",
                              "composite": undefined,
                              "font": "Math-I",
                              "italic": 0,
                              "italicStyle": false,
                              "rect": {
                                "depth": 0,
                                "height": 0.4306,
                                "width": 0,
                              },
                              "ref": false,
                              "space": {},
                            },
                            SymBox {
                              "atom": SymAtom {
                                "bold": false,
                                "char": "j",
                                "charBox": true,
                                "command": "j",
                                "composite": undefined,
                                "elem": null,
                                "font": null,
                                "fonts": [
                                  "Math-I",
                                ],
                                "italic": false,
                                "kind": "ord",
                                "parent": GroupAtom {
                                  "body": [
                                    FirstAtom {
                                      "elem": null,
                                      "kind": null,
                                      "parent": [Circular],
                                    },
                                    [Circular],
                                  ],
                                  "elem": null,
                                  "kind": "ord",
                                  "parent": MatrixAtom {
                                    "children": [
                                      [
                                        [Circular],
                                        [Circular],
                                      ],
                                      [
                                        [Circular],
                                      ],
                                    ],
                                    "editable": false,
                                    "elem": null,
                                    "grid": false,
                                    "kind": "inner",
                                    "labels": [],
                                    "parent": null,
                                    "type": "pmatrix",
                                  },
                                },
                                "ref": false,
                              },
                              "bold": false,
                              "char": "j",
                              "composite": undefined,
                              "font": "Math-I",
                              "italic": 0.05724,
                              "italicStyle": false,
                              "rect": {
                                "depth": 0.19444,
                                "height": 0.65952,
                                "width": 0.46905,
                              },
                              "ref": false,
                              "space": {},
                            },
                          ],
                          "label": null,
                          "mode": "hbox",
                          "multiplier": undefined,
                          "rect": {
                            "depth": 0.19444,
                            "height": 0.65952,
                            "width": 0.46905,
                          },
                          "space": {},
                          "thmName": null,
                        },
                        "shift": 0.6099999999999999,
                      },
                    ],
                    "multiplier": undefined,
                    "rect": {
                      "depth": -0.4155599999999999,
                      "height": 1.26952,
                      "width": 0.46905,
                    },
                    "space": {
                      "left": 0.5,
                    },
                    "tag": false,
                  },
                ],
                "label": null,
                "mode": "hbox",
                "multiplier": undefined,
                "rect": {
                  "depth": 0.78444,
                  "height": 1.26952,
                  "width": 1.9381,
                },
                "space": {
                  "bottom": 0.16555999999999993,
                  "top": 0.18047999999999997,
                },
                "thmName": null,
              },
            ],
            "label": null,
            "mode": "hbox",
            "multiplier": undefined,
            "rect": {
              "depth": 0.95,
              "height": 1.45,
              "width": 1.9381,
            },
            "space": {},
            "thmName": null,
          },
          "shift": 0,
        },
      ],
      "multiplier": undefined,
      "rect": {
        "depth": 0.95,
        "height": 1.45,
        "width": 1.9381,
      },
      "space": {},
      "tag": false,
    },
    SymBox {
      "atom": SymAtom {
        "bold": false,
        "char": ")",
        "charBox": true,
        "command": ")",
        "composite": undefined,
        "elem": null,
        "font": null,
        "fonts": [
          "Size3",
        ],
        "italic": false,
        "kind": "open",
        "parent": null,
        "ref": false,
      },
      "bold": false,
      "char": ")",
      "composite": undefined,
      "font": "Size3",
      "italic": 0,
      "italicStyle": false,
      "rect": {
        "depth": 0.95003,
        "height": 1.45,
        "width": 0.73611,
      },
      "ref": false,
      "space": {},
    },
  ],
  "label": null,
  "mode": "hbox",
  "multiplier": undefined,
  "rect": {
    "depth": 0.95003,
    "height": 1.45,
    "width": 3.41032,
  },
  "space": {},
  "thmName": null,
}
`;

exports[`overline atom 1`] = `
VStackBox {
  "align": undefined,
  "atom": OverlineAtom {
    "body": GroupAtom {
      "body": [
        FirstAtom {
          "elem": null,
          "kind": null,
          "parent": [Circular],
        },
        SymAtom {
          "bold": false,
          "char": "j",
          "charBox": true,
          "command": "j",
          "composite": undefined,
          "elem": null,
          "font": null,
          "fonts": [
            "Math-I",
          ],
          "italic": false,
          "kind": "ord",
          "parent": [Circular],
          "ref": false,
        },
      ],
      "elem": null,
      "kind": "ord",
      "parent": [Circular],
    },
    "elem": null,
    "kind": "ord",
    "parent": null,
  },
  "children": [
    RectBox {
      "atom": undefined,
      "classes": [
        "line",
      ],
      "multiplier": undefined,
      "rect": {
        "depth": 0,
        "height": 0.04,
        "width": 0,
      },
      "space": {
        "bottom": 0.12,
        "top": 0.04,
      },
    },
    HBox {
      "atom": GroupAtom {
        "body": [
          FirstAtom {
            "elem": null,
            "kind": null,
            "parent": [Circular],
          },
          SymAtom {
            "bold": false,
            "char": "j",
            "charBox": true,
            "command": "j",
            "composite": undefined,
            "elem": null,
            "font": null,
            "fonts": [
              "Math-I",
            ],
            "italic": false,
            "kind": "ord",
            "parent": [Circular],
            "ref": false,
          },
        ],
        "elem": null,
        "kind": "ord",
        "parent": OverlineAtom {
          "body": [Circular],
          "elem": null,
          "kind": "ord",
          "parent": null,
        },
      },
      "children": [
        SymBox {
          "atom": FirstAtom {
            "elem": null,
            "kind": null,
            "parent": GroupAtom {
              "body": [
                [Circular],
                SymAtom {
                  "bold": false,
                  "char": "j",
                  "charBox": true,
                  "command": "j",
                  "composite": undefined,
                  "elem": null,
                  "font": null,
                  "fonts": [
                    "Math-I",
                  ],
                  "italic": false,
                  "kind": "ord",
                  "parent": [Circular],
                  "ref": false,
                },
              ],
              "elem": null,
              "kind": "ord",
              "parent": OverlineAtom {
                "body": [Circular],
                "elem": null,
                "kind": "ord",
                "parent": null,
              },
            },
          },
          "bold": false,
          "char": "&#8203;",
          "composite": undefined,
          "font": "Math-I",
          "italic": 0,
          "italicStyle": false,
          "rect": {
            "depth": 0,
            "height": 0.4306,
            "width": 0,
          },
          "ref": false,
          "space": {},
        },
        SymBox {
          "atom": SymAtom {
            "bold": false,
            "char": "j",
            "charBox": true,
            "command": "j",
            "composite": undefined,
            "elem": null,
            "font": null,
            "fonts": [
              "Math-I",
            ],
            "italic": false,
            "kind": "ord",
            "parent": GroupAtom {
              "body": [
                FirstAtom {
                  "elem": null,
                  "kind": null,
                  "parent": [Circular],
                },
                [Circular],
              ],
              "elem": null,
              "kind": "ord",
              "parent": OverlineAtom {
                "body": [Circular],
                "elem": null,
                "kind": "ord",
                "parent": null,
              },
            },
            "ref": false,
          },
          "bold": false,
          "char": "j",
          "composite": undefined,
          "font": "Math-I",
          "italic": 0.05724,
          "italicStyle": false,
          "rect": {
            "depth": 0.19444,
            "height": 0.65952,
            "width": 0.46905,
          },
          "ref": false,
          "space": {},
        },
      ],
      "label": null,
      "mode": "hbox",
      "multiplier": undefined,
      "rect": {
        "depth": 0.19444,
        "height": 0.65952,
        "width": 0.46905,
      },
      "space": {},
      "thmName": null,
    },
  ],
  "multiplier": undefined,
  "newDepth": 0.19444,
  "rect": {
    "depth": 0.19444,
    "height": 0.8595200000000001,
    "width": 0.46905,
  },
  "shift": -0,
  "space": {},
}
`;

exports[`sqrt atom 1`] = `
VBox {
  "align": undefined,
  "atom": SqrtAtom {
    "body": GroupAtom {
      "body": [
        FirstAtom {
          "elem": null,
          "kind": null,
          "parent": [Circular],
        },
        SymAtom {
          "bold": false,
          "char": "j",
          "charBox": true,
          "command": "j",
          "composite": undefined,
          "elem": null,
          "font": null,
          "fonts": [
            "Math-I",
          ],
          "italic": false,
          "kind": "ord",
          "parent": [Circular],
          "ref": false,
        },
      ],
      "elem": null,
      "kind": "ord",
      "parent": [Circular],
    },
    "elem": null,
    "kind": "ord",
    "parent": null,
  },
  "children": [
    {
      "box": SqrtBox {
        "atom": undefined,
        "innerHeight": 1.0417100000000001,
        "multiplier": undefined,
        "rect": {
          "depth": 0.273585,
          "height": 0.926415,
          "width": 1.41905,
        },
        "shift": -0.273585,
        "size": 1,
        "space": {},
      },
      "shift": 0,
    },
    {
      "box": HBox {
        "atom": GroupAtom {
          "body": [
            FirstAtom {
              "elem": null,
              "kind": null,
              "parent": [Circular],
            },
            SymAtom {
              "bold": false,
              "char": "j",
              "charBox": true,
              "command": "j",
              "composite": undefined,
              "elem": null,
              "font": null,
              "fonts": [
                "Math-I",
              ],
              "italic": false,
              "kind": "ord",
              "parent": [Circular],
              "ref": false,
            },
          ],
          "elem": null,
          "kind": "ord",
          "parent": SqrtAtom {
            "body": [Circular],
            "elem": null,
            "kind": "ord",
            "parent": null,
          },
        },
        "children": [
          SymBox {
            "atom": FirstAtom {
              "elem": null,
              "kind": null,
              "parent": GroupAtom {
                "body": [
                  [Circular],
                  SymAtom {
                    "bold": false,
                    "char": "j",
                    "charBox": true,
                    "command": "j",
                    "composite": undefined,
                    "elem": null,
                    "font": null,
                    "fonts": [
                      "Math-I",
                    ],
                    "italic": false,
                    "kind": "ord",
                    "parent": [Circular],
                    "ref": false,
                  },
                ],
                "elem": null,
                "kind": "ord",
                "parent": SqrtAtom {
                  "body": [Circular],
                  "elem": null,
                  "kind": "ord",
                  "parent": null,
                },
              },
            },
            "bold": false,
            "char": "&#8203;",
            "composite": undefined,
            "font": "Math-I",
            "italic": 0,
            "italicStyle": false,
            "rect": {
              "depth": 0,
              "height": 0.4306,
              "width": 0,
            },
            "ref": false,
            "space": {},
          },
          SymBox {
            "atom": SymAtom {
              "bold": false,
              "char": "j",
              "charBox": true,
              "command": "j",
              "composite": undefined,
              "elem": null,
              "font": null,
              "fonts": [
                "Math-I",
              ],
              "italic": false,
              "kind": "ord",
              "parent": GroupAtom {
                "body": [
                  FirstAtom {
                    "elem": null,
                    "kind": null,
                    "parent": [Circular],
                  },
                  [Circular],
                ],
                "elem": null,
                "kind": "ord",
                "parent": SqrtAtom {
                  "body": [Circular],
                  "elem": null,
                  "kind": "ord",
                  "parent": null,
                },
              },
              "ref": false,
            },
            "bold": false,
            "char": "j",
            "composite": undefined,
            "font": "Math-I",
            "italic": 0.05724,
            "italicStyle": false,
            "rect": {
              "depth": 0.19444,
              "height": 0.65952,
              "width": 0.46905,
            },
            "ref": false,
            "space": {},
          },
        ],
        "label": null,
        "mode": "hbox",
        "multiplier": undefined,
        "rect": {
          "depth": 0.19444,
          "height": 0.65952,
          "width": 0.46905,
        },
        "space": {
          "left": 0.95,
        },
        "thmName": null,
      },
      "shift": 0,
    },
  ],
  "multiplier": undefined,
  "rect": {
    "depth": 0.273585,
    "height": 0.926415,
    "width": 1.41905,
  },
  "space": {},
  "tag": false,
}
`;

exports[`sqrt atom 2`] = `
VBox {
  "align": undefined,
  "atom": SqrtAtom {
    "body": GroupAtom {
      "body": [
        FirstAtom {
          "elem": null,
          "kind": null,
          "parent": [Circular],
        },
      ],
      "elem": null,
      "kind": "ord",
      "parent": [Circular],
    },
    "elem": null,
    "kind": "ord",
    "parent": null,
  },
  "children": [
    {
      "box": SqrtBox {
        "atom": undefined,
        "innerHeight": 0.61835,
        "multiplier": undefined,
        "rect": {
          "depth": 0.190825,
          "height": 0.809175,
          "width": 0.777,
        },
        "shift": -0.190825,
        "size": "small",
        "space": {},
      },
      "shift": 0,
    },
    {
      "box": HBox {
        "atom": GroupAtom {
          "body": [
            FirstAtom {
              "elem": null,
              "kind": null,
              "parent": [Circular],
            },
          ],
          "elem": null,
          "kind": "ord",
          "parent": SqrtAtom {
            "body": [Circular],
            "elem": null,
            "kind": "ord",
            "parent": null,
          },
        },
        "children": [
          SymBox {
            "atom": FirstAtom {
              "elem": null,
              "kind": null,
              "parent": GroupAtom {
                "body": [
                  [Circular],
                ],
                "elem": null,
                "kind": "ord",
                "parent": SqrtAtom {
                  "body": [Circular],
                  "elem": null,
                  "kind": "ord",
                  "parent": null,
                },
              },
            },
            "bold": false,
            "char": "&#8203;",
            "composite": undefined,
            "font": "Math-I",
            "italic": 0,
            "italicStyle": false,
            "rect": {
              "depth": 0,
              "height": 0.4306,
              "width": 0,
            },
            "ref": false,
            "space": {},
          },
        ],
        "label": null,
        "mode": "hbox",
        "multiplier": undefined,
        "rect": {
          "depth": 0,
          "height": 0.4306,
          "width": 0,
        },
        "space": {
          "left": 0.777,
        },
        "thmName": null,
      },
      "shift": 0,
    },
  ],
  "multiplier": undefined,
  "rect": {
    "depth": 0.190825,
    "height": 0.809175,
    "width": 0.777,
  },
  "space": {},
  "tag": false,
}
`;

exports[`supsub atom 1`] = `
HBox {
  "atom": SupSubAtom {
    "elem": null,
    "kind": "ord",
    "nuc": SymAtom {
      "bold": false,
      "char": "j",
      "charBox": true,
      "command": "j",
      "composite": undefined,
      "elem": null,
      "font": null,
      "fonts": [
        "Math-I",
      ],
      "italic": false,
      "kind": "ord",
      "parent": GroupAtom {
        "body": [
          FirstAtom {
            "elem": null,
            "kind": null,
            "parent": [Circular],
          },
          [Circular],
        ],
        "elem": null,
        "kind": "ord",
        "parent": [Circular],
      },
      "ref": false,
    },
    "parent": null,
    "sub": GroupAtom {
      "body": [
        FirstAtom {
          "elem": null,
          "kind": null,
          "parent": [Circular],
        },
        SymAtom {
          "bold": false,
          "char": "j",
          "charBox": true,
          "command": "j",
          "composite": undefined,
          "elem": null,
          "font": null,
          "fonts": [
            "Math-I",
          ],
          "italic": false,
          "kind": "ord",
          "parent": [Circular],
          "ref": false,
        },
      ],
      "elem": null,
      "kind": "ord",
      "parent": [Circular],
    },
    "sup": GroupAtom {
      "body": [
        FirstAtom {
          "elem": null,
          "kind": null,
          "parent": [Circular],
        },
        SymAtom {
          "bold": false,
          "char": "j",
          "charBox": true,
          "command": "j",
          "composite": undefined,
          "elem": null,
          "font": null,
          "fonts": [
            "Math-I",
          ],
          "italic": false,
          "kind": "ord",
          "parent": [Circular],
          "ref": false,
        },
      ],
      "elem": null,
      "kind": "ord",
      "parent": [Circular],
    },
  },
  "children": [
    SymBox {
      "atom": SymAtom {
        "bold": false,
        "char": "j",
        "charBox": true,
        "command": "j",
        "composite": undefined,
        "elem": null,
        "font": null,
        "fonts": [
          "Math-I",
        ],
        "italic": false,
        "kind": "ord",
        "parent": GroupAtom {
          "body": [
            FirstAtom {
              "elem": null,
              "kind": null,
              "parent": [Circular],
            },
            [Circular],
          ],
          "elem": null,
          "kind": "ord",
          "parent": SupSubAtom {
            "elem": null,
            "kind": "ord",
            "nuc": [Circular],
            "parent": null,
            "sub": [Circular],
            "sup": [Circular],
          },
        },
        "ref": false,
      },
      "bold": false,
      "char": "j",
      "composite": undefined,
      "font": "Math-I",
      "italic": 0.05724,
      "italicStyle": false,
      "rect": {
        "depth": 0.19444,
        "height": 0.65952,
        "width": 0.46905,
      },
      "ref": false,
      "space": {},
    },
    VBox {
      "align": "start",
      "atom": undefined,
      "children": [
        {
          "box": HBox {
            "atom": GroupAtom {
              "body": [
                FirstAtom {
                  "elem": null,
                  "kind": null,
                  "parent": [Circular],
                },
                SymAtom {
                  "bold": false,
                  "char": "j",
                  "charBox": true,
                  "command": "j",
                  "composite": undefined,
                  "elem": null,
                  "font": null,
                  "fonts": [
                    "Math-I",
                  ],
                  "italic": false,
                  "kind": "ord",
                  "parent": [Circular],
                  "ref": false,
                },
              ],
              "elem": null,
              "kind": "ord",
              "parent": SupSubAtom {
                "elem": null,
                "kind": "ord",
                "nuc": SymAtom {
                  "bold": false,
                  "char": "j",
                  "charBox": true,
                  "command": "j",
                  "composite": undefined,
                  "elem": null,
                  "font": null,
                  "fonts": [
                    "Math-I",
                  ],
                  "italic": false,
                  "kind": "ord",
                  "parent": [Circular],
                  "ref": false,
                },
                "parent": null,
                "sub": [Circular],
                "sup": [Circular],
              },
            },
            "children": [
              SymBox {
                "atom": FirstAtom {
                  "elem": null,
                  "kind": null,
                  "parent": GroupAtom {
                    "body": [
                      [Circular],
                      SymAtom {
                        "bold": false,
                        "char": "j",
                        "charBox": true,
                        "command": "j",
                        "composite": undefined,
                        "elem": null,
                        "font": null,
                        "fonts": [
                          "Math-I",
                        ],
                        "italic": false,
                        "kind": "ord",
                        "parent": [Circular],
                        "ref": false,
                      },
                    ],
                    "elem": null,
                    "kind": "ord",
                    "parent": SupSubAtom {
                      "elem": null,
                      "kind": "ord",
                      "nuc": SymAtom {
                        "bold": false,
                        "char": "j",
                        "charBox": true,
                        "command": "j",
                        "composite": undefined,
                        "elem": null,
                        "font": null,
                        "fonts": [
                          "Math-I",
                        ],
                        "italic": false,
                        "kind": "ord",
                        "parent": [Circular],
                        "ref": false,
                      },
                      "parent": null,
                      "sub": [Circular],
                      "sup": [Circular],
                    },
                  },
                },
                "bold": false,
                "char": "&#8203;",
                "composite": undefined,
                "font": "Math-I",
                "italic": 0,
                "italicStyle": false,
                "rect": {
                  "depth": 0,
                  "height": 0.4306,
                  "width": 0,
                },
                "ref": false,
                "space": {},
              },
              SymBox {
                "atom": SymAtom {
                  "bold": false,
                  "char": "j",
                  "charBox": true,
                  "command": "j",
                  "composite": undefined,
                  "elem": null,
                  "font": null,
                  "fonts": [
                    "Math-I",
                  ],
                  "italic": false,
                  "kind": "ord",
                  "parent": GroupAtom {
                    "body": [
                      FirstAtom {
                        "elem": null,
                        "kind": null,
                        "parent": [Circular],
                      },
                      [Circular],
                    ],
                    "elem": null,
                    "kind": "ord",
                    "parent": SupSubAtom {
                      "elem": null,
                      "kind": "ord",
                      "nuc": [Circular],
                      "parent": null,
                      "sub": [Circular],
                      "sup": [Circular],
                    },
                  },
                  "ref": false,
                },
                "bold": false,
                "char": "j",
                "composite": undefined,
                "font": "Math-I",
                "italic": 0.05724,
                "italicStyle": false,
                "rect": {
                  "depth": 0.19444,
                  "height": 0.65952,
                  "width": 0.46905,
                },
                "ref": false,
                "space": {},
              },
            ],
            "label": null,
            "mode": "hbox",
            "multiplier": 0.7,
            "rect": {
              "depth": 0.13610799999999998,
              "height": 0.46166399999999996,
              "width": 0.328335,
            },
            "space": {
              "right": 0.07142857142857144,
            },
            "thmName": null,
          },
          "shift": 0.48090799999999995,
        },
        {
          "box": HBox {
            "atom": GroupAtom {
              "body": [
                FirstAtom {
                  "elem": null,
                  "kind": null,
                  "parent": [Circular],
                },
                SymAtom {
                  "bold": false,
                  "char": "j",
                  "charBox": true,
                  "command": "j",
                  "composite": undefined,
                  "elem": null,
                  "font": null,
                  "fonts": [
                    "Math-I",
                  ],
                  "italic": false,
                  "kind": "ord",
                  "parent": [Circular],
                  "ref": false,
                },
              ],
              "elem": null,
              "kind": "ord",
              "parent": SupSubAtom {
                "elem": null,
                "kind": "ord",
                "nuc": SymAtom {
                  "bold": false,
                  "char": "j",
                  "charBox": true,
                  "command": "j",
                  "composite": undefined,
                  "elem": null,
                  "font": null,
                  "fonts": [
                    "Math-I",
                  ],
                  "italic": false,
                  "kind": "ord",
                  "parent": [Circular],
                  "ref": false,
                },
                "parent": null,
                "sub": [Circular],
                "sup": [Circular],
              },
            },
            "children": [
              SymBox {
                "atom": FirstAtom {
                  "elem": null,
                  "kind": null,
                  "parent": GroupAtom {
                    "body": [
                      [Circular],
                      SymAtom {
                        "bold": false,
                        "char": "j",
                        "charBox": true,
                        "command": "j",
                        "composite": undefined,
                        "elem": null,
                        "font": null,
                        "fonts": [
                          "Math-I",
                        ],
                        "italic": false,
                        "kind": "ord",
                        "parent": [Circular],
                        "ref": false,
                      },
                    ],
                    "elem": null,
                    "kind": "ord",
                    "parent": SupSubAtom {
                      "elem": null,
                      "kind": "ord",
                      "nuc": SymAtom {
                        "bold": false,
                        "char": "j",
                        "charBox": true,
                        "command": "j",
                        "composite": undefined,
                        "elem": null,
                        "font": null,
                        "fonts": [
                          "Math-I",
                        ],
                        "italic": false,
                        "kind": "ord",
                        "parent": [Circular],
                        "ref": false,
                      },
                      "parent": null,
                      "sub": [Circular],
                      "sup": [Circular],
                    },
                  },
                },
                "bold": false,
                "char": "&#8203;",
                "composite": undefined,
                "font": "Math-I",
                "italic": 0,
                "italicStyle": false,
                "rect": {
                  "depth": 0,
                  "height": 0.4306,
                  "width": 0,
                },
                "ref": false,
                "space": {},
              },
              SymBox {
                "atom": SymAtom {
                  "bold": false,
                  "char": "j",
                  "charBox": true,
                  "command": "j",
                  "composite": undefined,
                  "elem": null,
                  "font": null,
                  "fonts": [
                    "Math-I",
                  ],
                  "italic": false,
                  "kind": "ord",
                  "parent": GroupAtom {
                    "body": [
                      FirstAtom {
                        "elem": null,
                        "kind": null,
                        "parent": [Circular],
                      },
                      [Circular],
                    ],
                    "elem": null,
                    "kind": "ord",
                    "parent": SupSubAtom {
                      "elem": null,
                      "kind": "ord",
                      "nuc": [Circular],
                      "parent": null,
                      "sub": [Circular],
                      "sup": [Circular],
                    },
                  },
                  "ref": false,
                },
                "bold": false,
                "char": "j",
                "composite": undefined,
                "font": "Math-I",
                "italic": 0.05724,
                "italicStyle": false,
                "rect": {
                  "depth": 0.19444,
                  "height": 0.65952,
                  "width": 0.46905,
                },
                "ref": false,
                "space": {},
              },
            ],
            "label": null,
            "mode": "hbox",
            "multiplier": 0.7,
            "rect": {
              "depth": 0.13610799999999998,
              "height": 0.46166399999999996,
              "width": 0.328335,
            },
            "space": {
              "left": -0.08177142857142858,
              "right": 0.07142857142857144,
            },
            "thmName": null,
          },
          "shift": -0.276864,
        },
      ],
      "multiplier": undefined,
      "rect": {
        "depth": 0.412972,
        "height": 0.942572,
        "width": 0.328335,
      },
      "space": {},
      "tag": false,
    },
  ],
  "label": null,
  "mode": "hbox",
  "multiplier": undefined,
  "rect": {
    "depth": 0.412972,
    "height": 0.942572,
    "width": 0.797385,
  },
  "space": {},
  "thmName": null,
}
`;
